Fix a scrollbar shake

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -1,3 +1,6 @@
+html { 
+  margin-left: calc(100vw - 100%); 
+}
 body {
   margin: auto;
 }
